<resources>
    <string name="app_name">Shuffled</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_placeholder">username@email.com</string>
    <string name="password_placeholder">your password here</string>
    <string name="enter_button_title">Enter</string>
    <string name="enter_with_google_card_title">Sign in with Google account</string>
    <string name="enter_no_have_account_text">Don\'t have an account yet?</string>
    <string name="enter_register_text">Register</string>

    <string name="text_enter_invalid_credentials_error_message">Invalid credentials. Email or password is incorrect.</string>
    <string name="text_enter_somthing_happens_try_again_later_massage">Oops, something unexpected happened. Please try again later.</string>

    <string name="default_web_client_id">927359803389-qob8s57nd0ot2diffmlest4dl6thv5e9.apps.googleusercontent.com</string>
    <string name="cardListTitleTextViewInDeckFragment">Cards</string>
    <string name="addNewCardButtonInDeckFragment">+</string>
    <string name="deckTitleHintEditTextInDeckFragment">Deck title</string>
    <string name="deckDescriptionHintEditTextInDeckFragment">Deck description</string>
    <string name="studyButtonTitleInDeckFragment">Start</string>
    <string name="recentSectionTitleText">Favorites</string>
    <string name="deckSectionTitleText">Decks</string>
    <string name="createDeckButtonTitle">Create deck</string>
    <string name="slashSeparatorText">/</string>
    <string name="alreadyHaveAccountText">Already have an account?</string>
    <string name="acessYourAccountText">Access your account</string>
    <string name="usageTextLiteral">Usage</string>
    <string name="doneButtonTitleText">Done</string>
    <string name="editTheCardBotomSheetTitle">Edit the flashcard</string>
    <string name="createTheCardBotomSheetTitle">Create a flashcard</string>
    <string name="questionHintEditText">Question</string>
    <string name="anwserHintEditText">Answer</string>
    <string name="saveButtonTitle">Save</string>
    <string name="makeDeckBottomSheetTitleText">Create your deck</string>
    <string name="deckNamePlaceholderTitle">Deck name</string>
    <string name="deckDescriptionPlaceholderTitle">Deck description</string>
    <string name="deckNameHintTitle">Your deck\'s name</string>
    <string name="deckDescriptionHintTitle">Your deck\'s description</string>
    <string name="makeButtonTitleInCreateDeckBottomSheet">Create</string>
    <string name="deckEmptyStateTitle">Your deck is empty</string>
    <string name="deckEmptyStateDescription">To start studying, click on `+` and create a card</string>
    <string name="appNameText">SHUFFLED</string>
    <string name="logoutButtonTitle">Logout</string>
    <string name="appVersionPrefixLiteralText">Shuffled is in version </string>

    <string name="textAreYouSureInteruptStudyInFlashFragment">Are you sure you want to interrupt your studies?</string>
    <string name="textYourProgressWillBeLostInFlashFragment">Your progress will be lost if you interrupt your studies.</string>

    <string name="textYes">Yes</string>
    <string name="textNo">No</string>
    <string name="testTryAgain">try again</string>
    <string name="textCreateDeck">create deck</string>

    <!--  NEW GUIDE  -->
    <!-- HOME -->
    <string name="homeScreenTitleText">Decks</string>

    <string name="homeEmptyStateTitleText">There are no decks to show</string>
    <string name="homeEmptyStateMessageText">you can create and start study</string>

    <string name="homeErrorStateTitleText">Ops, something wrong occurs!</string>
    <string name="homeErrorStateMessageText">try again later</string>

    <string name="homeErrorStateRetryButtonTitleText">retry</string>
</resources>
