<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/ImageSolidIconView"
                android:id="@+id/closeDeckCreationIndicatorImageView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/makeDeckBottomSheetTitleText"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/closeDeckCreationIndicatorImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/closeDeckCreationIndicatorImageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:paddingVertical="12dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/deckImageContainerCardView"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="16dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/deckImageViewInCreateDeckBottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray_100"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/deckNamePlaceholderTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/deckNamePlaceholderTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/deckImageContainerCardView"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextViewEdits" />

            <EditText
                android:id="@+id/deckNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/deckNameHintTitle"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/deckImageContainerCardView"
                app:layout_constraintTop_toBottomOf="@id/deckNamePlaceholderTextView" />


            <TextView
                android:id="@+id/deckDescriptionPlaceholderTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/deckDescriptionPlaceholderTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/deckImageContainerCardView"
                app:layout_constraintTop_toBottomOf="@id/deckNameEditText" />

            <EditText
                android:id="@+id/deckDescriptionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/deckDescriptionHintTitle"
                android:inputType="text|textMultiLine"
                android:maxLines="2"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/deckImageContainerCardView"
                app:layout_constraintTop_toBottomOf="@id/deckDescriptionPlaceholderTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createDeckButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="22dp"
            android:text="@string/makeButtonTitleInCreateDeckBottomSheet"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_fields_container" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>