<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:paddingBottom="12dp">

        <ImageView
            style="@style/ImageSolidIconView"
            android:id="@+id/image_close"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:text="@string/editTheCardBotomSheetTitle"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/image_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_close" />

        <ImageView
            android:id="@+id/deleteCardIndicatorImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_trash"
            app:layout_constraintBottom_toBottomOf="@id/image_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_close"
            app:tint="@color/red_300" />

        <LinearLayout
            android:id="@+id/ll_fields_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="22dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_close">

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginVertical="10dp"
                android:background="@color/gray_300" />

            <EditText
                android:id="@+id/edit_text_card_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints="@null"
                android:background="@null"
                android:drawableStart="@drawable/ic_question"
                android:drawablePadding="8dp"
                android:hint="@string/questionHintEditText"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_card_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/ic_answer"
                android:drawablePadding="8dp"
                android:hint="@string/anwserHintEditText" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/idBtnDismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/saveButtonTitle"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_fields_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>